--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ https://powerspreadsheets.com/send-email-excel-vba/#The-MailItem-Object
 
 
 <div id="outlookhtml" class="macroouter">
-<h1>Create mail icl. range and signature</h1>
+<h1>Mail incl. range and signature</h1>
 <h2>Prepares mail in Outlook. Body of e-mail is prepared using HTML language. Table is inserted into body. Macro also adds sender's signature.<br>
 Useful links:<br>
 https://www.rondebruin.nl/win/s1/outlook/signature.htm<br>
@@ -3609,6 +3609,7 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 <h4><b><a href="#outlook">Outlook</a></b></h4>
 <h4><a href="#outlook1">Create mail early binding</a></h4>
 <h4><a href="#outlook2">Create mail late binding</a></h4>
+<h4><a href="#outlookhtml">Mail incl. range and signature</a></h4>
 <h4><a href="#outlook3">Create many mails</a></h4>
 <h4><a href="#outlook4">Get Outlook data</a></h4>
 <h4><a href="#outlook5">Get Outlook data conditions</a></h4>
