--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index2.html"">NeverTooLateToAutomate</a>
+      <a class="navbar-brand" href="index2.html">NeverTooLateToAutomate</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 		<!--<li><a href="#section1">Start</a></li>-->
         <li><a href="#section2">SQL queries</a></li>
 		<li><a href="index.html">VBA macros</a></li>
-        <li class="visible-xs-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
+        <li class="visible-md-block visible-lg-block visible-xl-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
       </ul>
 
     </div>
@@ -117,13 +117,13 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 
 <img src="Northwind.png" class="img-responsive" alt="">
 
-<h2><p>Next, download and install data management system - <b>Microsoft® SQL Server® Express</b></p>
+<h2><p>Next, download and install data management system - <b>Microsoft® SQL Server® Express</b>.</p>
 
 <p><a href="#https://www.microsoft.com/en-us/download/details.aspx?id=55994">https://www.microsoft.com/en-us/download/details.aspx?id=55994</a></p></h2>
 
 <img src="express.png" class="img-responsive" alt="">
 
-<h2><p>Download and install a tool for managing your SQL infrastructure - <b>SQL Server Management Studio (SSMS)</b></p>
+<h2><p>Download and install a tool for managing your SQL infrastructure - <b>SQL Server Management Studio (SSMS)</b>.</p>
 
 <p><a href="#https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms">https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms</a></p></h2>
 
@@ -817,7 +817,7 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 
 <div class="macroinner">
 
-<h3>SSELECT DISTINCT(LEFT(PhotoPath, 25))</h3>
+<h3>SELECT DISTINCT(LEFT(PhotoPath, 25))</h3>
 
 <h3>FROM Employees</h3>
 
