--- a/index.html
+++ b/index.html
@@ -1354,9 +1354,9 @@
 					<div id="SharepointGetList" class="macroouter">
 					<h1>Sharepoint Get List</h1>
 					<h2>Copies Sharepoint list's items into Excel's worksheet.<br>
-					 Enable ActiveX Data Objects in Tools - References<br>
-					 To find out URL of website right-click any item from the list and copy all Address (URL) umtil "listform".<br>
-					 To find GUID of a LIST after Nick Grattan's advice:<br>
+					Enable ActiveX Data Objects in Tools - References<br>
+					To find out URL of website right-click any item from the list and copy all Address (URL) until "listform".<br>
+					To find GUID of a LIST after Nick Grattan's advice:<br>
 					 <ul>
 					<li>Navigate to the SharePoint list using the browser.</li>
 					<li>Select the Settings + List Settings menu command.</li>
