--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
 		<!--<li><a href="#section1">Start</a></li>-->
         <li><a href="#section2">SQL queries</a></li>
 		<li><a href="index.html">VBA macros</a></li>
-        <li class="visible-md-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
+        <li class="visible-sm-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
       </ul>
 
     </div>
