--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
         </li>-->
 		<!--<li><a href="#section1">Start</a></li>-->
         <li><a href="#section2">SQL queries</a></li>
-		<li><a href="index.html">VBA macros</a></li>
+		<li><a href="index.html">VBA codes</a></li>
         <li class="visible-xs-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
       </ul>
 
