--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-	<title>NeverTooLateToAutomate</title>
+	<title>NeverTooLateToAutomate &#124; VBA and SQL repository by Piotr Janus</title>
 
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow" />
-	<meta name="description" content="Piotr Janus VBA SQL">
-	<meta name="keywords" content="Piotr Janus, never too late to automate, VBA, SQL, macro, Visual Basic for Applications, Structured Query Language, automation, process enhancement, coding">
+	<meta name="description" content="Plenty of useful VBA codes that will help you to automate your daily Excel routine &#124; Basic SQL queries to extract data from a database">
+	<meta name="keywords" content="NeverTooLateToAutomate, VBA, Visual Basic for Applications, macro, SQL, Structured Query Language, automation, process enhancement, coding">
 	<meta name="author" content="Piotr Janus">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="format-detection" content="telephone=no"/>
