--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
 							<h6>&nbsp;&nbsp    oRs.Open sSQL, sConn, adOpenStatic, adLockOptimistic</h6>
 							<h6>&nbsp;&nbsp    oRs.MoveLast</h6>
 							<h6>&nbsp;&nbsp    oRs.AddNew</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("pub_id") = 4545</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("pub_name") = "Gringo Bros."</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("city") = "Warsaw"</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("State") = ""</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("country") = "Poland"</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("pub_id") = 4545</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("pub_name") = "Gringo Bros."</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("city") = "Warsaw"</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("State") = ""</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("country") = "Poland"</h6>
 							<h6>&nbsp;&nbsp    oRs.Update</h6>
 							<h6>&nbsp;&nbsp    oRs.Close</h6>
 							<br>
@@ -426,8 +426,8 @@
 							<h5>&nbsp;&nbsp    ' update</h5>
 							<h6>&nbsp;&nbsp    oRs.Open sSQL, sConn, adOpenStatic, adLockOptimistic</h6>
 							<h6>&nbsp;&nbsp    oRs.Find ("pub_id = 4545")</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("pub_id") = 9999</h6>
-							<h6>&nbsp;&nbsp    oRs.fields("pub_name") = "Gregory Bros."</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("pub_id") = 9999</h6>
+							<h6>&nbsp;&nbsp    oRs.Fields("pub_name") = "Gregory Bros."</h6>
 							<h6>&nbsp;&nbsp    oRs.Update</h6>
 							<h6>&nbsp;&nbsp    oRs.Close</h6>
 							<br>
