--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<li class="active"><a href="#section1">Home</a></li>
 			<li><a href="#section2">VBA codes</a></li>
 			<li><a href="index2.html">SQL queries</a></li>
+			<!--<li><a href="index3.html">Python Excel</a></li>-->
 			<li class="visible-xs-block"><a href="#section3">Contact</a></li>
 		  </ul>
 		</div>
@@ -3715,7 +3716,7 @@
 							<h6>End Sub</h6>
 						</div>
 						<br>
-					<h2>Date formatting included:</h2>
+						<h2>Date formatting included:</h2>
 						<div class="macroinner">
 							<h6>&nbsp;&nbsp	FirstDayOfPreviousMonth = Format(DateSerial(Year(myDate), Month(myDate) - 1, 1), "dd-mmm-yyyy")</h6>
 							<h6>&nbsp;&nbsp	LastDayOfPreviousMonth = Format(DateSerial(Year(myDate), Month(myDate), 0), "dd-mmm-yyyy")</h6>
